#+======================================================================
# $Source:  $
#
# Project:      Tango Manager
#
# Description:  Starter revisions
#
# $Author: pascal_verdier $
#
# $Revision: $
#
#-======================================================================



Starter-6.3 	09/11/2014:
	Add patches from Elettra.
	Improve level managemnt for startup.
	Replace tg->get_orb()->run() by tg->server_run() in main.

Starter-6.2 	01/10/2014:
	Regenerate code with Pogo-9 to be full compatible with Tango-9

Starter-6.1 	19/06/2014:
	Add a stop on DevStartAll when a DevStopAll is received.

Starter-6.0 	25/03/2014:
	Add OFF state when any server is running.
	Update file headers.

Starter-5.13 	09/01/2014:
	Fixe a case sensitive problem.

Starter-5.12 	13/06/2013:
	Tag following small changes for Windows compil and change in Makefile.am (Linux compil).

Starter-5.11 	05/04/2013:
	State polling problem fixed.

Starter-5.10 	20/03/2013:
	Check size of string spectums for Tango-8.1 compatibility.

Starter-5.9 	08/03/2013:
	Update file headers.

Starter-5_8 	06/03/2013:
	Regenerated with Pogo-8.2 and improve status.

Starter_5_7 	12/11/2012:
	Modify python process check (process could be pythonxxxx). 

Starter-5.6 	09/08/2012:
	Problem when no server to control fixed.

Starter-5.5 	29/05/2012:
	Improve vc9 and vc10 projects.

Starter-5.4 	25/05/2012:
	Remove warnings detected by cppcheck.

Starter-5.3 	31/03/2011:
	Use sigaction() instead sigset() to do not block SIGINT signal.

Starter-5.1 	23/02/2011:
	Tagging the Release_5_1 of the Starter project.

Starter-5.0 	11/02/2011:
	This commit was manufactured by cvs2svn to create tag.